adding content to html file

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         I am a 1 year student in the program <em>Interactive media design</em> at Algonquin College in Ottawa.
      </p>
      <p>
-         I am also a profesional stunt biker and gamer.i am close to finish my 1<sup>st</sup> in canada.
+         I am also a profesional stunt biker and gamer.i am close to finish my 1<sup>st</sup> year in canada.
      </p>
      <blockquote>
          live learn enjoy <cite>- Maroine Nfif</cite>
